src/tui/widgets/snapshots/patui__tui__widgets__table__tests__display_table_short_width.snap
---
source: src/tui/widgets/table.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 10 },
    content: [
        "Name                                 Creation Date",
        "                                                  ",
        "test0                          2024-08-31 11:00:00",
        "test1                          2024-08-31 11:00:00",
        "test2                          2024-08-31 11:00:00",
        "test3                          2024-08-31 11:00:00",
        "test4                          2024-08-31 11:00:00",
        "test5                          2024-08-31 11:00:00",
        "test6                          2024-08-31 11:00:00",
        "test7                          2024-08-31 11:00:00",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
